Минус логи. Косметический рефакторинг.